# fga-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cspell.json  init.sql  model.authz  model.json
crates/checker/: Cargo.toml
crates/checker/src/: cache_checker.rs  graph.rs  lib.rs  local_checker.rs  remote_checker.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: error.rs  lib.rs  tuple.rs  typesystem.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs
crates/storage/src/postgres/: helper.rs  mod.rs  tuple.rs
proto/v1/: fgars.proto
src/checker/: Cargo.toml
src/checker/src/: cache_checker.rs  error.rs  graph.rs  lib.rs  local_checker.rs  remote_checker.rs
src/checker/src/expander/: objects.rs  users.rs
src/checker/src/fixtures/: models.json  tenants.json  tuples.json
src/checker/src/fixtures/authz/: simple.zuthz
src/checker/src/tests/: check-cases.json  check.rs  expand-objects.json  expand-users.json  expand_objects.rs  expand_users.rs  mod.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/lsp/: Cargo.toml
src/lsp/src/: main.rs
src/migration/: Cargo.toml
src/migration/src/: lib.rs  m20220101_000001_pg_snowid.rs  m20240423_011759_init_tables.rs
src/migration/src/sql/: postgres_snowid.sql
src/proto/: Cargo.toml  build.rs
src/proto/src/: lib.rs
src/protocol/: Cargo.toml
src/protocol/src/: lib.rs  tuple.rs  typesystem.rs
src/schema/: Cargo.toml  README.md  build.rs  model.json
src/schema/benches/: schema_parser_benchmark.rs
src/schema/src/: ast.rs  grammar.lalrpop  grammar.rs  lexer.rs  lib.rs  pos.rs  test.rs  token.rs
src/schema/src/ast/: condition.rs  type.rs
src/schema/src/parser/: mod.rs  schema.rs
src/schema/src/tests/: ast.rs  parser.rs
src/server/: Cargo.toml
src/server/src/: config.rs  error.rs  grpc.rs  http.rs  lib.rs
src/server/src/expander/: error.rs  mod.rs  objects.rs  users.rs
src/server/src/grpc/: zanzibar.rs
src/server/src/handler/: mod.rs
src/server/src/http/: authz_model.rs  tenant.rs  zanzibar.rs
src/storage/: Cargo.toml
src/storage/src/: lib.rs
src/storage/src/postgres/: authz_model.rs  helper.rs  mod.rs  tenant.rs  tuple.rs
src/storage/src/sea/: authz_model.rs  mod.rs  tenant.rs
