[workspace.package]
# name = "fga-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["src/*"]
resolver = "2"

[workspace.dependencies]
actix = "0.13"
clap = "4.5"
env_logger = "0.11"
# kube = "0.88.1"
lazy_static = "1.4"
log = "0.4"
rayon = "1.8"
serde = {version = "1.0", features = ["derive"]}
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
tonic-build = "0.11.0"
prost = "0.12.4"
tonic-reflection = "0.11.0"
tower = "0.4"
tracing = "0.1"
anyhow = "1.0"
base64 = "0.22"
moka = "0.12"
chrono = "0.4"
thiserror = "1.0"
sea-orm = { version = "0.12", features = [
  "sqlx-all",
  "runtime-tokio-rustls",
  "mock"
] }
sea-orm-migration = { version = "0.12", features = [] }
sea-orm-cli = { version = "0.12", features = [] }
async-trait = "0.1"
serde_json = "1.0"
futures = "0.3"
axum = "0.7"
humantime-serde = "1.1"
tower-http = { version = "0.5", features = ["full"] }
tracing-subscriber = "0.3"
aide = { version = "0.13", features = ["axum", "redoc", "scalar"] }
schemars = "0.8"
indexmap = "2.2"
lalrpop = "0.20"
lalrpop-util = "0.20"
itertools = "0.12"
unicode-xid = "0.2"
phf = { version = "0.11", features = ["macros"] }
tower-lsp = "0.20.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }

criterion = { version = "0.5", features = ["html_reports"] }
quaternion = "1.0.0"
