[package]
name = "checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true}
base64 = { workspace = true }
moka = { workspace = true, features = ["sync"] }

protocol ={ path = "../protocol"}
