[package]
name = "checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
moka = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }

protocol = { path = "../protocol" }
storage = { path = "../storage" }
proto = { path = "../proto" }
