[package]
name = "schema"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "schema_parser_benchmark"
harness = false

[[bin]]
name = "schema_parser"
path = "src/bin/schema_parser.rs"

[dependencies]
nom = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
quaternion = { workspace = true }
