[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "signal"] }
async-trait = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
axum = { workspace = true, features = ["tokio"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde.workspace = true
serde_json.workspace = true
humantime-serde.workspace = true
