[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
checker = { path = "../checker"}
storage = { path = "../storage"}
protocol = { path = "../protocol"}
schema = { path = "../schema"}
proto = { path = "../proto"}

sea-orm = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
axum = { workspace = true, features = ["tokio", "macros"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
humantime-serde = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
aide = { workspace = true }
schemars = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
